--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,9 +6,12 @@ server:
     threads:
       max: 50
       min-spare: 5
+  shutdown: graceful
 book:
   greeting: Hello from the configuration yaml file!
 spring:
+  lifecycle:
+    timeout-per-shutdown-phase: 15s
   output:
     ansi:
       enabled: always
